# ProPores2

./: .gitignore  CMakeLists.txt  README.md  config.yaml  install_linux_macOS.sh  install_python_macOS.sh  install_python_ubuntu_debian.sh  install_windows.bat  overview.tsv  propores_batch.py  propores_gui.py  propores_status.py
rotamer_lib/: ARG_trimed.txt  ASN_trimed.txt  GLN_trimed.txt  GLU_trimed.txt  HIS_trimed.txt  ILE_trimed.txt  LEU_trimed.txt  LYS_trimed.txt  MET_trimed.txt  PHE_trimed.txt  SER_trimed.txt  TRP_trimed.txt  TYR_trimed.txt
src/: CMakeLists.txt  angles.cpp  angles.h  atom.cpp  atom.h  basics.cpp  basics.h  configuration.py  enums.cpp  enums.h  gate.h  gate_open.cpp  gate_open.h  grid.h  gui.py  pore_id.cpp  pore_id.h  propores.cpp  reader.cpp  reader.h  settings.h  trace.cpp  trace.h  vector.h
tests/: CMakeLists.txt
tests/lib/googletest/: CMakeLists.txt
tests/lib/googletest/src/: gtest-internal-inl.h  gtest.cc
tests/test_src/: CMakeLists.txt  test_angles.cpp  test_grid.cpp  test_pore_ID.cpp
tests/unittests/: CMakeLists.txt  test_angles.cpp  test_atom.cpp  test_basics.cpp  test_enums.cpp  test_grid.cpp  test_pore_ID.cpp  test_reader.cpp  test_vector.cpp
